--- a/src/Styles/CoinInfo.scss
+++ b/src/Styles/CoinInfo.scss
@@ -14,4 +14,9 @@
             overflow : scroll;
         }
     }    
+    .nav-coin{
+        &:hover{
+            cursor : pointer;
+        }
+    }
 }
